lilv (0.24.21) unstable; urgency=medium

  * Fix dependencies in pkg-config file

 -- David Robillard <d@drobilla.net>  Wed, 05 Oct 2022 19:46:05 +0000

lilv (0.24.20) stable; urgency=medium

  * Adopt REUSE machine-readable licensing standard
  * Update project metadata

 -- David Robillard <d@drobilla.net>  Fri, 09 Sep 2022 17:28:30 +0000

lilv (0.24.18) stable; urgency=medium

  * Allow programs to be used from subproject
  * Fix default LV2_PATH

 -- David Robillard <d@drobilla.net>  Fri, 12 Aug 2022 22:15:29 +0000

lilv (0.24.16) stable; urgency=medium

  * Fix fallback flock() detection on MacOS
  * Switch to meson build system

 -- David Robillard <d@drobilla.net>  Tue, 19 Jul 2022 01:16:26 +0000

lilv (0.24.14) stable; urgency=medium

  * Fix build issues with newer toolchains
  * Fix unused parameter warnings
  * Update zix tree

 -- David Robillard <d@drobilla.net>  Fri, 27 May 2022 01:38:26 +0000

lilv (0.24.12) stable; urgency=medium

  * Allow connecting ports to structures in Python
  * Fix potential memory error when joining filesystem paths
  * Fix saving state with files on Windows
  * Fix unlikely undefined behavior when saving state
  * Fix writing state manifests on Windows
  * Remove the need for a generated configuration header

 -- David Robillard <d@drobilla.net>  Thu, 07 Jan 2021 21:46:06 +0000

lilv (0.24.10) stable; urgency=medium

  * Fix memory leaks in lv2bench
  * Fix various minor warnings and other code quality issues
  * Make lilv_world_get() use translations
  * Split and clean up test suite

 -- David Robillard <d@drobilla.net>  Sun, 27 Sep 2020 12:17:02 +0000

lilv (0.24.8) stable; urgency=medium

  * Allow passing strings for URIs in Python API when unambiguous
  * Fix cases where incorrect translation is used
  * Fix deleting state bundles loaded from the model
  * Fix memory leak when dyn-manifest has no plugins (thanks Michael Fisher)
  * Implement state:freePath feature
