@@ -90,21 +90,10 @@ add_project_arguments(platform_defines, language: ['c'])
 m_dep = cc.find_library('m', required: false)
 dl_dep = cc.find_library('dl', required: false)
 
-lv2_dep = dependency('lv2',
-                     version: '>= 1.18.2',
-                     fallback: ['lv2', 'lv2_dep'])
-
-serd_dep = dependency('serd-0',
-                      version: '>= 0.30.10',
-                      fallback: ['serd', 'serd_dep'])
-
-sord_dep = dependency('sord-0',
-                      version: '>= 0.16.10',
-                      fallback: ['sord', 'sord_dep'])
-
-sratom_dep = dependency('sratom-0',
-                        version: '>= 0.6.10',
-                        fallback: ['sratom', 'sratom_dep'])
+serd_dep = dependency('serd-0', fallback: 'serd', version: '>= 0.30.10')
+sord_dep = dependency('sord-0', fallback: 'sord', version: '>= 0.16.10')
+lv2_dep = dependency('lv2', fallback: 'lv2', version: '>= 1.18.2')
+sratom_dep = dependency('sratom-0', fallback: 'sratom', version: '>= 0.6.10')
 
 ###########
 # Library #
@@ -169,6 +158,9 @@ pkg.generate(
   subdirs: [versioned_name],
   version: meson.project_version(),
 )
+
+# Override pkg-config dependency for internal meson dependants
+meson.override_dependency(versioned_name, lilv_dep)
 
 # Install headers to a versioned include directory
 install_headers(c_headers, subdir: versioned_name / 'lilv')
