@@ -1,8 +1,9 @@
 lilv (0.24.21) unstable; urgency=medium
 
   * Fix dependencies in pkg-config file
+  * Override pkg-config dependency within meson
 
- -- David Robillard <d@drobilla.net>  Wed, 05 Oct 2022 19:46:05 +0000
+ -- David Robillard <d@drobilla.net>  Fri, 07 Oct 2022 17:36:55 +0000
 
 lilv (0.24.20) stable; urgency=medium
 
